--- a/Web4/BlendedAPI/Styles/exercise.less
+++ b/Web4/BlendedAPI/Styles/exercise.less
@@ -91,6 +91,7 @@
 
     .more-body-module {
       background-color: @panel-default-heading-bg;
+      padding: 0 15px;
       padding-bottom: 20px;
       border: 1px solid @panel-default-border;
       border-radius: @alert-border-radius;
