--- a/Web4/BlendedAPI/Styles/other.less
+++ b/Web4/BlendedAPI/Styles/other.less
@@ -118,6 +118,14 @@
       bottom: 0;
       z-index: 20;
     }
+
+    &.learn-progress {
+      background-color: @brand-info;
+
+      .progress-red {
+        background-color: gray;
+      }
+    }
   }
 
   .lm-tabs-header {
@@ -132,16 +140,15 @@
   }
 
   .close-panel {
-    position:absolute;
-    right:10px;
-    top:10px;
-    font-size:24px;
-    color:lightgray;
-    cursor:pointer;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    font-size: 24px;
+    color: lightgray;
+    cursor: pointer;
   }
 
   .position-relative {
-    position:relative;
+    position: relative;
   }
-  
 }
