--- a/Web4/BlendedAPI/Styles/exercise.css
+++ b/Web4/BlendedAPI/Styles/exercise.css
@@ -68,6 +68,7 @@
 }
 .bl .topbar-exercise .more-body-module {
   background-color: #f5f5f5;
+  padding: 0 15px;
   padding-bottom: 20px;
   border: 1px solid #dddddd;
   border-radius: 4px;
