--- a/Web4/BlendedAPI/Styles/home.css
+++ b/Web4/BlendedAPI/Styles/home.css
@@ -65,6 +65,9 @@ fieldset[disabled] .bl .btn-succes-info.active {
   color: #dff0d8;
   background-color: #3c763d;
 }
+.bl .home-more-panel {
+  padding: 10px;
+}
 .bl .study-plan > li {
   position: relative;
   padding-left: 60px;
@@ -74,20 +77,41 @@ fieldset[disabled] .bl .btn-succes-info.active {
   margin: 8px 0;
 }
 .bl .study-plan > li .left-mark,
-.bl .study-plan > li .right-mark {
+.bl .study-plan > li .right-mark,
+.bl .study-plan > li .percent-mark {
   position: absolute;
+  text-align: center;
 }
 .bl .study-plan > li .left-mark {
   left: 0;
   top: 10px;
-  font-size: 24px;
   width: 50px;
-  text-align: center;
   border-right: solid 1px transparent;
+  font-size: 24px;
 }
 .bl .study-plan > li .right-mark {
   top: 10px;
   right: 10px;
+}
+.bl .study-plan > li .percent-mark {
+  padding-left: 5px;
+}
+.bl .study-plan > li .percent-mark .progress-bar {
+  position: relative;
+  width: 38px;
+  height: 32px;
+  font-size: 12px;
+  background-color: #5cb85c;
+  border-radius: 4px;
+  line-height: 34px;
+}
+.bl .study-plan > li .percent-mark .progress-bar .progress-red {
+  position: absolute;
+  background-color: #ff6022;
+  border-radius: 4px;
+  left: 0;
+  right: 0;
+  top: 0;
 }
 .bl .study-plan .list-group-item-success-primary .left-mark {
   border-right-color: #dff0d8;
