Pred zmenou: zabraneni paralelniho ladovani produktu

--- a/Web4/BlendedAPI/Styles/exercise.css
+++ b/Web4/BlendedAPI/Styles/exercise.css
@@ -1,3 +1,10 @@
+.bl {
+  /*.exercise-place {
+    margin-top:20px;
+    border: solid 1px @panel-default-border;
+    padding:10px;
+  }*/
+}
 .bl .topbar-exercise {
   height: auto;
   padding-top: 2px;
