--- a/Web4/BlendedAPI/Styles/exercise.less
+++ b/Web4/BlendedAPI/Styles/exercise.less
@@ -9,6 +9,12 @@
 
   @oli-red: #ff6022;
 
+  /*.exercise-place {
+    margin-top:20px;
+    border: solid 1px @panel-default-border;
+    padding:10px;
+  }*/
+
   .topbar-exercise {
     height: auto; //prepsany styl difotniho top baru
     padding-top:2px;
