--- a/Web4/BlendedAPI/Styles/other.less
+++ b/Web4/BlendedAPI/Styles/other.less
@@ -47,31 +47,7 @@
 
   .wizzard {
     font-size: 110%;
-
-    .fa {
-      color: lightgray;
-      padding: 0 10px;
-    }
-
-    .wizzard-item {
-      display: inline;
-      padding: .2em .6em .3em;
-      line-height: 1;
-      text-align: center;
-      white-space: nowrap;
-      vertical-align: baseline;
-      border: 1px solid lightgray;
-      border-radius: .25em;
-      color: lightgray;
-
-      &.done, &.active {
-        color: #fff;
-        .bg-variant(@brand-primary);
-      }
-
-      &.future {
-      }
-    }
+    td {vertical-align:middle;}    
   }
 
   h3 .flag-small {
