--- a/Web4/BlendedAPI/vyzva/Views/exercise.html
+++ b/Web4/BlendedAPI/vyzva/Views/exercise.html
@@ -16,7 +16,7 @@
   </div>
   <div class="container-fluid" style="background-color:white;" ng-include="'vyzva$exercise$modulemorepanel.html'"></div>
 </div>
-<div class="container lm-top-margin-lg">
+<div class="container lm-top-margin">
   <div class="instruction" ng-include="'vyzva$exercise$instruction.html'"></div>
   <div class="new-ea lm-top-margin" data-show-exercise="" ex-service="::exService"></div>
 </div>
