--- a/NewLMComModel/Design/Templates/html.tt
+++ b/NewLMComModel/Design/Templates/html.tt
@@ -44,7 +44,9 @@
   <div id='lm-alert-place' class='rtl'></div>
   <div id='lm-console-place' class='rtl'></div>
   <div id='lm-docdlg-place' class='rtl'></div>
+  <#if (!cfg.noAngularjsApp) { #>
   <div ng-app="appRoot" class="bl"><div data-ui-view></div></div>
+  <# } #>
   <div id='root'></div>
   <script id='dummy' type='text/x-jsrender' data-for='Dummy'>
     {{for ~ActPage()}}{{/for}}
