--- a/Web4/BlendedAPI/vyzva/Views/managerSchool.html
+++ b/Web4/BlendedAPI/vyzva/Views/managerSchool.html
@@ -1,86 +1,122 @@
 ﻿<a href="#" ng-click="ts.debugDeletCompany()">del</a>
-<div ng-if="ts.wizzardStep<2">
-  TODO: vysvětlení
-  <br />
-  <br />
-  <div class="col-sm-12 wizzard">
-    <span class="wizzard-item" ng-class="{'active': ts.wizzardStep==0, 'done': ts.wizzardStep>0}">1. Založení studijních skupin</span>
-    <span class="fa fa-arrow-right"></span>
-    <span class="wizzard-item" ng-class="{'active': ts.wizzardStep==1, 'done': ts.wizzardStep>1, 'future': ts.wizzardStep<1}">2. Potvrzení</span>
-    <span class="fa fa-arrow-right"></span>
-    <span class="wizzard-item future">3. Licenční klíče pro lektory</span>
-  </div>
-  <div class="clearfix"></div>
-  <div data-ng-if="ts.wizzardStep<2">
-    <br />
-    <div class="alert alert-default" ng-if="ts.wizzardStep==0">
-      <div class="row">
-        <div class="col-sm-12 text-center">
-          <h4>Přidat studijní skupinu...</h4>
-        </div>
-      </div>
+<div class="wizzard">
+  <div ng-if="ts.wizzardStep<2">
+    <div class="alert alert-success" data-ng-if="ts.wizzardStep==0">
       <div class="row">
         <div class="col-sm-6">
-          <h4 class="text-center">...studentů (dle šablony č. 4)</h4>
-          <div class="col-sm-4" ng-repeat="btn in [1,2,5]" style="padding:0;">
-            <button class="btm btn-info" ng-click="ts.addItem(btn, false)" style="white-space:nowrap">
-              <span class="flag-small" ng-class="btn | lineIdsFlag"></span> {{btn | lineIdsText}}
-            </button>
-          </div>
+          <h4>Krok číslo 1: založení studijních skupin</h4>
+          Postupně přidávejte studijní skupiny pro Vaše studenty (šablona č. 4) a učitele (šablona č. 3). Upravte jim <i>Název studijní skupiny</i> a <i>Počet (studentů nebo učitelů)</i><br />
+          Pro učitele přidejte pouze jednu studijní skupinu na kurz (například všichni učitelé, co budou studovat angličtinu, budou v jedné studijní skupině).
         </div>
         <div class="col-sm-6">
-          <h4 class="text-center">...učitelů (dle šablony č. 3)</h4>
-          <div class="col-sm-4" ng-repeat="btn in [1,2,5]" style="padding:0;">
-            <button class="btm btn-info" ng-disabled="ts.disabled(btn)" ng-click="ts.addItem(btn, true)" style="white-space:nowrap">
-              <span class="flag-small" ng-class="btn | lineIdsFlag"></span> {{btn | lineIdsText}}
-            </button>
-          </div>
+          <h4>Vysvětlní pojmů:</h4>
+          <b>Student</b>: student nebo žák Vaší školy<br />
+          <b>Učitel</b>: učitel Vaší školy, který se bude vyučovat v rámci šablony č.3.<br />
+          <b>Lektor</b>: učitel Vaší školy, který bude řídit výuku studentů v rámci šablony č. 4.<br />
+          <b>Správce</b>: to jste Vy, který spravujete studijní skupiny a lektory.<br />
         </div>
       </div>
     </div>
-    <table class="table table-bordered">
-      <thead>
-        <tr>
-          <th>Kurz</th>
-          <th>Název studijní skupiny</th>
-          <th>Šablona</th>
-          <th>Počet (studnetů nebo učitelů)</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr data-ng-repeat="item in ts.groups">
-          <td ng-bind="item.line | lineIdsText"></td>
-          <td><input class="form-control" ng-model="item.title" ng-readonly="ts.wizzardStep>0" placeholder="titulek..." /></td>
-          <td ng-bind="item.isPattern3 | vyzva$managerschool$sablonaid"></td>
-          <td><input class="form-control" ng-model="item.num" ng-readonly="ts.wizzardStep>0" /></td>
-          <td><button class="btn btn-sm btn-info" ng-if="ts.wizzardStep==0" ng-click="ts.removeItem($index)">X</button></td>
-        </tr>
-      </tbody>
-    </table>
-
+    <div class="alert alert-success" data-ng-if="ts.wizzardStep==1">
+      <h4>Krok číslo 2: kontrola studijních skupin</h4>
+      Zkontrolujte zadané údaje.
+    </div>
     <div class="clearfix"></div>
-    <br />
-    <button class="btm btn-default btn-lg" ng-if="ts.wizzardStep==1" ng-click="ts.wizzardClick(true)">Předchozí</button>
-    <button class="btm btn-success btn-lg" ng-click="ts.wizzardClick(false)">{{ts.nextTitle}}</button>
+    <div data-ng-if="ts.wizzardStep<2">
+      <br />
+      <div class="alert alert-default" ng-if="ts.wizzardStep==0">
+        <div class="row">
+          <div class="col-sm-12 text-center">
+            <h4>Přidat studijní skupinu...</h4>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6">
+            <h4 class="text-center">...studentů (dle šablony č. 4)</h4>
+            <div class="col-sm-4" ng-repeat="btn in [1,2,5]" style="padding:0;">
+              <button class="btm btn-warning" ng-click="ts.addItem(btn, false)" style="white-space:nowrap">
+                <span class="flag-small" ng-class="btn | lineIdsFlag"></span> {{btn | lineIdsText}}
+              </button>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <h4 class="text-center">...učitelů (dle šablony č. 3)</h4>
+            <div class="col-sm-4" ng-repeat="btn in [1,2,5]" style="padding:0;">
+              <button class="btm btn-warning" ng-disabled="ts.disabled(btn)" ng-click="ts.addItem(btn, true)" style="white-space:nowrap">
+                <span class="flag-small" ng-class="btn | lineIdsFlag"></span> {{btn | lineIdsText}}
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>Kurz</th>
+            <th>Název studijní skupiny</th>
+            <th>Šablona</th>
+            <th>Počet (studentů nebo učitelů)</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr data-ng-repeat="item in ts.groups">
+            <td ng-bind="item.line | lineIdsText"></td>
+            <td><input class="form-control" ng-model="item.title" ng-readonly="ts.wizzardStep>0 || item.isPattern3" placeholder="titulek..." /></td>
+            <td ng-bind="item.isPattern3 | vyzva$managerschool$sablonaid"></td>
+            <td><input class="form-control" ng-model="item.num" ng-readonly="ts.wizzardStep>0" /></td>
+            <td><button class="btn btn-sm btn-info" ng-if="ts.wizzardStep==0" ng-click="ts.removeItem($index)">X</button></td>
+          </tr>
+        </tbody>
+      </table>
+
+      <div class="clearfix"></div>
+      <br />
+      <div class="alert alert-success" data-ng-if="ts.wizzardStep==0">
+        Stikněte Potvrzení údajů, pokud jste přidali všechny požadované studijní skupiny se správným počtem studentů nebo učitelů.
+      </div>
+      <div class="alert alert-success" data-ng-if="ts.wizzardStep==1">
+        Jsou-li údaje v pořádku, stiskněte Údaje v pořádku. Pro opravu údajů stiskněte Opravit údaje.
+      </div>
+      <button class="btm btn-default btn-lg" ng-if="ts.wizzardStep==1" ng-click="ts.wizzardClick(true)">Opravit údaje</button>
+      <button class="btm btn-success btn-lg" ng-disabled="ts.groups.length==0" ng-click="ts.wizzardClick(false)">{{ts.nextTitle}}</button>
+    </div>
+
   </div>
 
-</div>
-
-<div data-ng-if="ts.wizzardStep==2">
-  TODO: vysvětlení
-  <br />
-  <br />
-  <h3>Administrátoři školy</h3>
-  <div vyzva$managerchool$usekeys items="::ts.company.managerKeys"></div>
-  <div ng-repeat="grp in ::ts.company.studyGroups">
-    <h4>
-      {{grp.title}}:
-      <span class="flag-small" ng-class="::grp.line | lineIdsFlag"></span>
-      {{::grp.line | lineIdsText}}
-      pro {{::grp.isPattern3 ? 'učitele (šablona č.3)' : 'studenty (šablona č.4)'}}
-    </h4>
-    <div vyzva$managerchool$usekeys items="::grp.lectorKeys"></div>
+  <div data-ng-if="ts.wizzardStep==2">
+    <div class="alert alert-success" data-ng-if="ts.wizzardStep==2">
+      <h4>Krok číslo 3: rozdání licenčních klíčů lektorům</h4>
+      <ul>
+        <li>
+          Pro každou skupinu máte připraveny 3 <i>Licenční klíče</i> pro lektory, kteří budou řídit výuku studentů ve skupině.
+          Každá skupina tedy může mít až 3 lektory (v případě nepřítomnosti lektora tak může řídit výuku jiný lektor).
+        </li>
+        <li>
+          Lektor zadá licenční klíč (který mu předáte) do aplikace tak, jako jste Vy zadával licenční klíč, který jsme Vám předali my.
+        </li>
+        <li>
+          Máte také možnost určit další dva Správce (se stejnými pravomocemi jako máte Vy). Předejte mu jeden ze dvou zbylých klíčů v tabulce Správci školy.
+        </li>
+        <li>
+          Po použití předaného licenčního klíče Lektorem nebo Správcem se jeho údaje (Jméno, Příjmení, EMail) objeví v tabulkách podobně, jako jsou vedeny Vaše údaje.
+        </li>
+        <li>
+          Lektor bude mít na své stránce licenční klíče pro své studenty - tyto Licenční klíče jim rozdá tak, aby měli přístup do výuky.
+        </li>
+      </ul>
+    </div>
+    <h3>Správci školy</h3>
+    <div vyzva$managerchool$usekeys items="::ts.company.managerKeys"></div>
+    <div ng-repeat="grp in ::ts.company.studyGroups">
+      <h4>
+        {{grp.title}}:
+        <span class="flag-small" style="vertical-align:top;" ng-class="::grp.line | lineIdsFlag"></span>
+        {{::grp.line | lineIdsText}}
+        pro {{::grp.isPattern3 ? 'učitele (šablona č.3)' : 'studenty (šablona č.4)'}}
+      </h4>
+      <div vyzva$managerchool$usekeys items="::grp.lectorKeys" hosts="::grp.visitorsKeys"></div>
+    </div>
   </div>
 </div>
 
