Done: uprava Recording kontrolky a sberu sound statistik

--- a/Web4/BlendedAPI/vyzva/Views/managerSchool.html
+++ b/Web4/BlendedAPI/vyzva/Views/managerSchool.html
@@ -9,7 +9,7 @@
           Pro učitele přidejte pouze jednu studijní skupinu na kurz (například všichni učitelé, co budou studovat angličtinu, budou v jedné studijní skupině).
         </div>
         <div class="col-sm-6">
-          <h4>Vysvětlní pojmů:</h4>
+          <h4>Vysvětlení pojmů:</h4>
           <b>Student</b>: student nebo žák Vaší školy<br />
           <b>Učitel</b>: učitel Vaší školy, který se bude vyučovat v rámci šablony č.3.<br />
           <b>Lektor</b>: učitel Vaší školy, který bude řídit výuku studentů v rámci šablony č. 4.<br />
