--- a/Web4/BlendedAPI/Styles/exercise.less
+++ b/Web4/BlendedAPI/Styles/exercise.less
@@ -9,6 +9,10 @@
 
   @oli-red: #ff6022;
 
+  .ex-lector-panel {
+    padding-top:10px;
+  }
+
   /*.exercise-place {
     margin-top:20px;
     border: solid 1px @panel-default-border;
@@ -75,14 +79,16 @@
 
       &.success {
         background-color: @btn-success-bg;
-        //border-color: @btn-success-border;
+        color: white;
+      }
+
+      &.danger {
+        background-color: @btn-danger-bg;
         color: white;
       }
 
       &.warning {
         background-color: white;
-        //border-color: @btn-warning-border;
-        //color: white;
       }
 
       .progress-red {
