--- a/Web4/BlendedAPI/Styles/style.css
+++ b/Web4/BlendedAPI/Styles/style.css
@@ -273,6 +273,9 @@ fieldset[disabled] .bl .btn-succes-info.active {
     padding:10px;
   }*/
 }
+.bl .ex-lector-panel {
+  padding-top: 10px;
+}
 .bl .topbar-exercise {
   height: auto;
   padding-top: 2px;
@@ -327,6 +330,10 @@ fieldset[disabled] .bl .btn-succes-info.active {
 }
 .bl .topbar-exercise .ex-item.success {
   background-color: #5cb85c;
+  color: white;
+}
+.bl .topbar-exercise .ex-item.danger {
+  background-color: #d9534f;
   color: white;
 }
 .bl .topbar-exercise .ex-item.warning {
