--- a/Web4/JsLib/css/lm.css
+++ b/Web4/JsLib/css/lm.css
@@ -3766,6 +3766,12 @@ fieldset[disabled] .testme .btn.card.active {
   width: 210px;
   margin-left: -100%;
 }
+.oli-audio-capture .lector.alert {
+  padding: 0;
+  margin: 5px 0;
+  padding-bottom: 10px;
+  display: none;
+}
 .oli-audio-capture .test-notify {
   color: #d9534f;
   text-align: left;
@@ -3928,7 +3934,8 @@ fieldset[disabled] .oli-audio-capture.recording .record.active {
 .oli-audio-capture .human-form .input-group {
   width: 250px;
 }
-.oli-audio-capture.human-eval-mode .human-form {
+.oli-audio-capture.human-eval-mode .human-form,
+.oli-audio-capture.human-eval-mode .lector {
   display: block;
 }
 .oli-writing textarea {
