--- a/Web4/BlendedAPI/vyzva/Views/exercise.html
+++ b/Web4/BlendedAPI/vyzva/Views/exercise.html
@@ -27,7 +27,10 @@
     <div class="row">
       <div class="col-sm-8">
         <h4>Vyhodnocení nahrávek studenta</h4>
-        <p>Poslechněte si nahrávky studenta klikem na modrou šipku. Pak vyplňte hodnocení v procentech (0-100). Po vyplnění všech hodnocení stiskněte <i>Uložit hodnocení</i></p>
+        <p>
+          Poslechněte si nahrávky studenta klikem na modrou šipku. Pak vyplňte hodnocení v procentech (0-100).
+          Po vyplnění všech hodnocení stiskněte <i>Uložit vyhodnocení</i>
+        </p>
       </div>
       <div class="col-sm-4">
         <button class="btn btn-success btn-lg pull-right" ng-click="::exService.saveLectorEvaluation()"><i class="fa fa-check"></i> Uložit vyhodnocení</button>
